--- a/steam-home-page/index.html
+++ b/steam-home-page/index.html
@@ -40,6 +40,10 @@
         Dojo Planner
       </div>
     </a>
+    <div class="time">
+      <iframe src="https://freesecure.timeanddate.com/clock/i6g5mnsb/n166/tlaf/fn8/fs48/fcfff/tct/pct/tt0/tw0/ts1/tb4" frameborder="0" width="492" height="110" allowTransparency="true">
+      </iframe>
+    </div>
   </div>
 </body>
 </html>
