--- a/steam-home-page/index.html
+++ b/steam-home-page/index.html
@@ -45,5 +45,9 @@
     <iframe src="https://freesecure.timeanddate.com/clock/i6g5mnsb/n166/tlaf/fn8/fs48/fcfff/tct/pct/tt0/tw0/ts1/tb4" frameborder="0" width="492" height="110" allowTransparency="true">
     </iframe>
   </div>
+  <div class="time-de">
+    <iframe src="https://freesecure.timeanddate.com/clock/i6g5mnsb/n250/tlaf/fn8/fs20/fcfff/tct/pct/tt0/tw0/ts1" frameborder="0" width="291" height="25" allowTransparency="true">
+    </iframe>
+  </div>
 </body>
 </html>
