--- a/steam-home-page/index.html
+++ b/steam-home-page/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div class="link-container">
-    <a href="https://hub.warframestat.us/timer">
+    <a href="https://hub.warframestat.us/timer" target="_blank">
       <div class="thumbnail pic-0">
       </div>
       <div class="text">
@@ -17,7 +17,7 @@
       </div>
     </a>
 
-    <a href="https://warframe.market">
+    <a href="https://warframe.market" target="_blank">
       <div class="thumbnail pic-1">
       </div>
       <div class="text">
@@ -25,7 +25,7 @@
       </div>
     </a>
 
-    <a href="http://ru.warframe.wikia.com/wiki/Заглавная_страница">
+    <a href="http://ru.warframe.wikia.com/wiki/Заглавная_страница" target="_blank">
       <div class="thumbnail pic-2">
       </div>
       <div class="text">
@@ -33,7 +33,7 @@
       </div>
     </a>
 
-    <a href="https://dojoplanner.stom66.co.uk/">
+    <a href="https://dojoplanner.stom66.co.uk/" target="_blank">
       <div class="thumbnail pic-3">
       </div>
       <div class="text">
@@ -48,6 +48,12 @@
   <div class="time-de">
     <iframe src="https://freesecure.timeanddate.com/clock/i6g5mnsb/n250/tlaf/fn8/fs20/fcfff/tct/pct/tt0/tw0/ts1" frameborder="0" width="291" height="25" allowTransparency="true">
     </iframe>
+  </div>
+  <div class="g-search">
+    <form action="https://www.google.com/search" class="searchform" method="get" name="searchform" target="_blank">
+      <input autocomplete="on" class="g-search" name="q" placeholder="Google" required="required" type="text">
+      <button class="button g-submit" type="submit">Search</button>
+    </form>
   </div>
 </body>
 </html>
