--- a/steam-home-page/index.html
+++ b/steam-home-page/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div class="link-container">
-    <a href="https://hub.warframestat.us/timer" target="_blank">
+    <a href="https://hub.warframestat.us/timer">
       <div class="thumbnail pic-0">
       </div>
       <div class="text">
@@ -17,7 +17,7 @@
       </div>
     </a>
 
-    <a href="https://warframe.market" target="_blank">
+    <a href="https://warframe.market">
       <div class="thumbnail pic-1">
       </div>
       <div class="text">
@@ -25,7 +25,7 @@
       </div>
     </a>
 
-    <a href="http://ru.warframe.wikia.com/wiki/Заглавная_страница" target="_blank">
+    <a href="http://ru.warframe.wikia.com/wiki/Заглавная_страница">
       <div class="thumbnail pic-2">
       </div>
       <div class="text">
@@ -33,7 +33,7 @@
       </div>
     </a>
 
-    <a href="https://dojoplanner.stom66.co.uk/" target="_blank">
+    <a href="https://dojoplanner.stom66.co.uk/">
       <div class="thumbnail pic-3">
       </div>
       <div class="text">
