--- a/steam-home-page/index.html
+++ b/steam-home-page/index.html
@@ -50,7 +50,7 @@
     </iframe>
   </div>
   <div class="g-search">
-    <form action="https://www.google.com/search" class="searchform" method="get" name="searchform" target="_blank">
+    <form action="https://www.google.com/search" class="searchform" method="get" name="searchform">
       <input autocomplete="on" class="g-search" name="q" placeholder="Google" required="required" type="text">
       <button class="button g-submit" type="submit">Search</button>
     </form>
